--- a/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.scss
+++ b/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.scss
@@ -4,7 +4,6 @@ $sidebar-hover-bg-color: rgba(241, 241, 241, 0.8);
 $sidebar-active-color: #FC5546; 
 $sidebar-shadow-color: rgba(0, 0, 0, 0.1); 
 
-// Define a mixin for common styles
 @mixin menu-item {
   color: $sidebar-text-color;
   text-decoration: none;
@@ -12,7 +11,7 @@ $sidebar-shadow-color: rgba(0, 0, 0, 0.1);
   align-items: center;
   padding: 10px 15px; 
   border-radius: 5px;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s, width 0.3s;
 
   .menu-icon {
     font-size: 22px;
@@ -21,6 +20,9 @@ $sidebar-shadow-color: rgba(0, 0, 0, 0.1);
 
   .menu-text {
     font-size: 14px;
+    transition: opacity 0.3s, width 0.3s;
+    white-space: nowrap; /* Prevent text from breaking */
+    overflow: hidden;
   }
 }
 
@@ -35,26 +37,28 @@ $sidebar-shadow-color: rgba(0, 0, 0, 0.1);
   padding: 20px 0;
   box-shadow: 2px 0 5px $sidebar-shadow-color; 
   overflow-y: auto;
-  transition: transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s, width 0.3s;
 
   &.showSidebar {
     transform: translateX(0);
     opacity: 1;
+    width: 250px;
   }
 
   &.hideSidebar {
-    transform: translateX(-100%);
-    opacity: 0;
+    transform: translateX(0);
+    opacity: 1;
+    width: 70px; /* Adjusted width for the hidden state */
   }
 
   ul {
     list-style: none;
     padding: 0;
-    margin: 0; 
+    margin: 0;
   }
 
   li {
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
   }
 
   li a {
@@ -75,24 +79,24 @@ $sidebar-shadow-color: rgba(0, 0, 0, 0.1);
     }
   }
 
-  .sub-menu {
-    padding-left: 20px; 
-    display: none; 
-    &.open {
-      display: block; 
-    }
-  }
-
-  .menu-icon {
-    justify-content: center;
-    padding-top: 4px;
+  .hide-text {
+    opacity: 0;
+    width: 0;
+    padding: 0;
+    margin: 0;
   }
 
   @media (max-width: 768px) {
-    width: 100%; 
-    height: calc(100vh - 64px); 
+    width: 100%;
+    height: calc(100vh - 64px);
     background-color: $sidebar-bg-color;
     opacity: 0.9;
-    z-index: 1000; 
+    z-index: 1000;
+
+    &.hideSidebar {
+      width: 60px; /* Smaller width for mobile */
+    }
   }
+  
+
 }
